# typed-argparse

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: annotation.md
example/: build_parser.py  example.py
src/typed_argparse/: __init__.py  annotated.py  builder.py  metadata.py  type_utils.py  unwrap.py
src/typed_argparse/integrations/: __init__.py  cmd2.py
test/: __init__.py  conftest.py  test_api.py  test_cmd2_runtime.py  test_parser_builder.py  test_support.py
